# metashrew

./: .clinerules  .dockerignore  .gitignore  .gitmodules  .repo  CONSERVATIVE_MEMORY_ALLOCATION_FIX.md  CONTRIBUTING.md  Cargo.toml  DATABASE_EXPLOSION_FIX_COMPLETE.md  DETERMINISTIC_MEMORY_REFRESH.md  Dockerfile  HEIGHT_DISCREPANCY_FIX.md  HEIGHT_PARTITIONED_CACHING.md  INCREMENTAL_SMT_SOLUTION.md  LICENSE  LRU_CACHE_DEBUGGING.md  LRU_CACHE_IMPLEMENTATION.md  LRU_CACHE_IMPLEMENTATION_SUMMARY.md  LRU_CACHE_MEMORY_PREALLOCATION.md  MAIN_MACRO_EXAMPLE.md  MEMORY_ALLOCATION_FIX.md  MEMORY_HANG_ANALYSIS.md  MEMORY_NONDETERMINISM_BUG.md  METASHREW_MACROS_GUIDE.md  OPTIMIZED_BST_SOLUTION.md  PARALLELIZED_VIEW_RUNTIME_GUIDE.md  PIPELINE_THREADING_INTERFACE.md  PROTOBUF_CROSS_PLATFORM_FIX.md  README.md  REORG_ROLLBACK_FIX.md  REORG_TEST_README.md  SMT_PERFORMANCE_OPTIMIZATIONS.md  SNAPSHOT_HANG_FIX.md  SNAPSHOT_HANG_FIX_COMPLETE.md  SPECIFICATION.md  STATEFUL_VIEWS_BENCHMARK_RESULTS.md  SUMMARY.md  VIEW_POOL_INTEGRATION_GUIDE.md  WASI_THREADS_IMPLEMENTATION_COMPLETE.md  WASM_MEMORY_ANALYSIS.md  (+26 more)
crates/debshrew-mono/: Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml
crates/debshrew-mono/examples/: bitcoin.conf  cdc-config.yaml  postgres-init.sql
crates/debshrew-mono/src/: cdc_config.rs  cdc_tracker.rs  kafka_producer.rs  lib.rs  main.rs  relationship_matcher.rs  runtime_adapter.rs  schema_manager.rs
crates/debshrew-mono/tests/: integration_test.rs
crates/metashrew-core/: Cargo.toml  build.rs
crates/metashrew-core/examples/: indexer_macro_example.rs
crates/metashrew-core/src/: allocator.rs  byte_view.rs  compat.rs  imports.rs  index_pointer.rs  lib.rs  lru_cache.rs  macros.rs  memory.rs  stdio.rs  utils.rs  wasi_threads.rs  wasm.rs
crates/metashrew-macros/: Cargo.toml
crates/metashrew-macros/src/: lib.rs
crates/metashrew-memory-stress/: Cargo.toml
crates/metashrew-memory-stress/src/: lib.rs
crates/metashrew-minimal/: Cargo.toml
crates/metashrew-minimal/src/: benchmark.rs  lib.rs
crates/metashrew-rocksdb/: Cargo.toml
crates/metashrew-rocksdb/src/: lib.rs
crates/metashrew-runtime/: Cargo.toml  STATEFUL_VIEWS.md
crates/metashrew-runtime/examples/: bst_example.rs
crates/metashrew-runtime/src/: context.rs  dry_run_test.rs  generic_runtime.rs  gpu_host_functions_test.rs  helpers.rs  key_utils.rs  lib.rs  optimized_bst.rs  rollback.rs  runtime.rs  smt.rs  test_utils.rs  traits.rs  view_pool.rs  zk_proof.rs  (+2 more)
crates/metashrew-support/: Cargo.toml  build.rs
crates/metashrew-sync/: Cargo.toml
crates/metashrew-test-harness/: Cargo.toml
crates/rockshrew-mono/: Cargo.toml  ROLLBACK.md
crates/rockshrew-runtime/: Cargo.toml
dynamodb/: Cargo.toml
dynamodb-runtime/: Cargo.toml
dynamodb-runtime/src/: lib.rs
dynamodb-view/: Cargo.toml  docker-entrypoint.sh
dynamodb-view/src/: main.rs
dynamodb/src/: main.rs
index/: Cargo.toml  README.md  docker-compose.yaml  docker-entrypoint.sh  rust-toolchain.toml
index/doc/: config_example.toml
index/internal/: config_specification.toml
index/src/: chain.rs  config.rs  daemon.rs  db.rs  electrum.rs  index.rs  lib.rs  mempool.rs  p2p.rs  server.rs  tracker.rs  types.rs
memshrew-p2p/: Cargo.toml
memshrew-p2p/src/: main.rs
metashrew-core/: Cargo.toml  README.md  build.rs
metashrew-core/examples/: native_indexer.rs  proto_indexer.rs  simple_indexer.rs
metashrew-core/src/: host.rs  imports.rs  index_pointer.rs  indexer.rs  lib.rs  macros.rs  native.rs  stdio.rs  view.rs  wasm.rs  wasm_exports.rs
metashrew-lib/: Cargo.toml
metashrew-lib/examples/: native_indexer.rs  proto_indexer.rs  simple_indexer.rs
metashrew-lib/src/: proto.rs  utils.rs
metashrew-repo/: Cargo.toml
metashrew-repo/src/: client.rs  lib.rs  main.rs  merkle.rs  server.rs  snapshot.rs
metashrew-support/: Cargo.toml  build.rs
metashrew-support/proto/: indexer_metadata.proto
metashrew-support/src/: address.rs  block.rs  index_pointer.rs  lib.rs  utils.rs
rockshrew/: Cargo.toml
rockshrew-diff/: Cargo.toml
rockshrew-diff/src/: existing_indexers.rs  main.rs  tracking_adapter.rs
rockshrew-mono/: Cargo.toml  IMPROVEMENTS.md  apply_improvements.sh  apply_improvements_fixed.sh
rockshrew-mono/src/: db_wrapper.rs  fast_sync.rs  improvements.rs  main.rs  main.rs.bak  smt_helper.rs  snapshot.rs  ssh_tunnel.rs
rockshrew-runtime/: Cargo.toml
rockshrew-runtime/examples/: bst_example.rs
rockshrew-runtime/src/: helpers.rs  lib.rs  merkleized_adapter.rs  runtime.rs  smt.rs
rockshrew-view/: Cargo.toml
rockshrew-view/src/: main.rs
rockshrew/src/: main.rs
runtime/: Cargo.toml  Cargo.toml.new  build.rs
runtime/benches/: runtime_benchmarks.rs
runtime/src/: lib.rs  linker_setup.rs  memory_pool.rs  mod.rs  runtime.rs  utils.rs  wasmi.rs
src/: .index.rs.swp  Cargo.toml  block_builder.rs  chain.rs  config.rs  daemon.rs  db.rs  electrum.rs  in_memory_adapters.rs  index.rs  lib.rs  metrics.rs  p2p.rs  server.rs  test_utils.rs  tracker.rs  wasm.rs
src/tests/: alkanes_simulation_test.rs  atomic_block_processing_test.rs  atomic_processing_test.rs  block_builder.rs  block_retry_test.rs  block_serialization_test.rs  block_skipping_test.rs  block_validation_test.rs  bst_debug_test.rs  bst_historical_debug.rs  bst_storage_debug.rs  bst_verification_test.rs  comprehensive_e2e_test.rs  concurrent_view_test.rs  core_functionality_test.rs  data_inspection_test.rs  database_persistence_test.rs  debug_test.rs  e2e_start_block_hang_test.rs  flush_memory_issue_test.rs  historical_view_test.rs  in_memory_adapters.rs  initialization_hang_test.rs  input_format_debug.rs  integration_tests.rs  jsonrpc_height_test.rs  jsonrpc_preview_test.rs  long_running_indexer_test.rs  lru_cache_e2e_test.rs  lru_cache_test.rs  memory_determinism_test.rs  memory_preallocate_test.rs  memory_refresh_hang_test.rs  mock_bitcoind_test.rs  mod.rs  preview_e2e_test.rs  production_snapshot_interval_test.rs  production_snapshot_test.rs  prove_reorg_bug_test.rs  reorg_focused_test.rs  (+23 more)
view/: Cargo.toml  Dockerfile  docker-entrypoint.sh
view/src/: main.rs
(+246 files in other folders)
