[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/metashrew-println",
  "test-wasms/*"
]

[workspace.package]
version = "9.1.0"

# Workspace dependencies for consistency
[workspace.dependencies]
anyhow = "1.0.86"
log = "0.4.22"
metashrew-runtime = { path = "crates/metashrew-runtime", version = "9.1.0" }
rockshrew-runtime = { path = "crates/rockshrew-runtime", version = "9.1.0" }
metashrew-sync = { path = "crates/metashrew-sync", version = "9.1.0" }
memshrew-runtime = { path = "crates/memshrew", version = "9.1.0" }
metashrew-println = { path = "crates/metashrew-println", version = "9.1.0", features = ["test-utils"] }
getrandom = { version = "0.2", features = ["js"] }

# Root package for running tests
[package]
name = "metashrew-tests"
version.workspace = true
edition = "2021"

[features]
default = []

[dependencies]
# Core dependencies
anyhow = "1.0.86"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.30"
async-trait = "0.1"
log = "0.4.22"
env_logger = "0.11"

# Metashrew dependencies
metashrew-runtime = { path = "crates/metashrew-runtime" }
metashrew-support = { path = "crates/metashrew-support" }
memshrew-runtime = { path = "crates/memshrew" }
rockshrew-runtime = { path = "crates/rockshrew-runtime" }
metashrew-sync = { path = "crates/metashrew-sync", features = ["test-utils"] }
rockshrew-mono = { path = "crates/rockshrew-mono" }

# Database dependencies
rocksdb = "0.21.0"
tempfile = "3.8"
sha2 = "0.10"

# Serialization dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"

# Bitcoin dependencies
bitcoin = "0.32.6"
hex = "0.4"

# Test dependencies
[dev-dependencies]
tokio-test = "0.4.4"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.12", features = ["json"] }
actix-web = "4.9.0"
actix-cors = "0.7.0"

# Build dependencies for compiling WASM
[build-dependencies]
# No additional build dependencies needed - using cargo directly

