[package]
name = "metashrew-dynamodb-runtime"
version = "8.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.13"
aws-sdk-dynamodb = "1.59.0"
metashrew-runtime = { path = "../runtime" }
redis = "0.26.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
