[package]
name = "metashrew-keydb-runtime"
version = "8.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
metashrew-runtime = { path = "../runtime" }
redis = "0.26.1"
