[package]
name = "metashrew-keydb-view"
version = "8.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
hex = "0.4.3"
itertools = "0.12.1"
rlp = "0.5.2"
log = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
substring = "1.4.5"
tiny-keccak = {version = "2.0.2", features = ["sha3"]}
wasmtime = "18.0.3"
metashrew-keydb-runtime = { path = "../keydb-runtime" }
metashrew-runtime = { path = "../runtime" }
redis = "0.26.1"
bitcoin = "0.32.1"
anyhow = "1.0.86"
env_logger = "0.11.3"
serde_json = "1.0.120"
actix-cors = "0.7.0"
