[package]
name = "metashrew-dynamodb"
version = "8.0.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
hex = "0.4.3"
http = "1.1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
metashrew-dynamodb-runtime = { path = "../dynamodb-runtime" }
metashrew-runtime = { path = "../runtime" }
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
clap_derive = "4.5.13"
env_logger = "0.11.5"
log = "0.4.22"
itertools = "0.13.0"
futures-util = "0.3.30"
retry = "2.0.0"
task = "0.0.1"
aws-sdk-dynamodb = "1.59.0"
aws-config = "1.5.13"
