[package]
name = "metashrew-indexer"
version = "8.0.5"
authors = ["Sandshrew Inc <inquiries@sandshrew.io>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/romanz/metashrew"
repository = "https://github.com/romanz/metashrew"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
documentation = "https://docs.rs/metashrew/"
readme = "README.md"
edition = "2021"
build = "build.rs"

[features]
default = []
########metrics = ["prometheus", "tiny_http"]
#metrics_process = ["prometheus/process"]

[package.metadata.configure_me]
spec = "internal/config_specification.toml"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.31.0", features = ["serde", "rand-std"] }
bitcoin_slices = { version = "0.7", features = ["bitcoin", "sha2"] }
bitcoincore-rpc = { version = "0.18" }
configure_me = "0.4"
crossbeam-channel = "0.5"
dirs-next = "2.0"
env_logger = "0.10"
hex = "0.4.3"
hex_lit = "0.1.1"
itertools = "0.12.0"
log = "0.4"
parking_lot = "0.12"
prometheus = { version = "0.13", optional = true }
rand = "0.8.5"
rayon = "1.8"
rlp = "0.5.2"
serde = "1.0"
serde_derive = "1.0.193"
serde_json = "1.0"
signal-hook = "0.3"
tempdir = "0.3.7"
tiny_http = { version = "0.12", optional = true }
uuid = "1.7.0"
wasmtime = "15.0.1"
wasmtime-wasi = "15.0.1"
metashrew-runtime = { path = "../runtime" }

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["lz4"]

[build-dependencies]
configure_me_codegen = { version = "0.4.4", default-features = false }

[dev-dependencies]
bitcoin-test-data = "0.2.0"
hex_lit = "0.1.1"
tempfile = "3.8"
