[package]
name = "memshrew-p2p"
version = "8.5.1"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
itertools = "0.14.0"
clap = { version = "4.5.26", features = ["unstable-doc"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
env_logger = "0.11.6"
hex = "0.4.3"
anyhow = "1.0.95"
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
log = "0.4.25"
actix-cors = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rand = "0.9.0"
