[package]
name = "metashrew-core"
version = "8.5.1"
description = "metashrew indexer bindings"
repository = "https://github.com/sandshrewmetaprotocols/metashrew"
license = "MIT"
edition = "2021"
resolver = "2"



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = "0.31.2"
bytes = "1.6.0"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100"
ordinals = "0.0.8"
protobuf = "3"
anyhow = "1.0.89"
wasm-bindgen-test = "0.3.49"
hex = "0.4.3"
metashrew-support = { path = "../metashrew-support" }

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

[features]
test-utils = []
panic-hook = []
