[package]
name = "metashrew-support"
version = "8.4.0"
edition = "2021"
description = "Support library for Metashrew indexers"
license = "MIT"
repository = "https://github.com/sandshrewmetaprotocols/metashrew"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.90"
bech32 = "0.11.0"
bitcoin = "0.32.4"
hex = "0.4.3"
protobuf = "3.7.1"

[build-dependencies]
anyhow = "1.0.90"
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
