[package]
name = "rockshrew-diff"
version = "8.5.1"
edition = "2021"
description = "A tool to compare the output of two WASM modules in Metashrew"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.10"
hex = "0.4"
itertools = "0.11"
log = "0.4"
metashrew-runtime = { path = "../runtime" }
rockshrew-runtime = { path = "../rockshrew-runtime" }
rocksdb = "0.21"
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
wasmtime = "15.0.1"
