[package]
name = "rockshrew-mono"
version = "8.5.1"
edition = "2021"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }
rockshrew-runtime = { path = "../rockshrew-runtime" }
metashrew-runtime = { path = "../runtime" }
serde_json = "1.0.136"
actix-web = "4.9.0"
serde = "1.0.217"
log = "0.4.25"
env_logger = "0.11.6"
hex = "0.4.3"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5", features = ["unstable-doc", "derive"] }
actix-cors = "0.7.0"
itertools = "0.14.0"
anyhow = "1.0.95"
num_cpus = "1.16.0"
