[package]
name = "rockshrew-mono"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime = { path = "../runtime" }
rockshrew-runtime = { path = "../rockshrew-runtime" }
metashrew-repo = { path = "../metashrew-repo" }

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.30"

# Bitcoin
bitcoincore-rpc = "0.18.0"

# Command line
clap = { version = "4.5.26", features = ["derive"] }

# Logging
log = "0.4.20"
env_logger = "0.10.1"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# SSH tunneling
ssh2 = "0.9.4"

# Utilities
hex = "0.4.3"
