[package]
name = "rockshrew-view"
version = "8.5.1"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
hex = "0.4.3"
itertools = "0.12.1"
rlp = "0.5.2"
log = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
substring = "1.4.5"
tiny-keccak = {version = "2.0.2", features = ["sha3"]}
wasmtime = "18.0.3"
rockshrew-runtime = { path = "../rockshrew-runtime" }
metashrew-runtime = { path = "../runtime" }
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
bitcoin = "0.32.1"
anyhow = "1.0.86"
env_logger = "0.11.3"
serde_json = "1.0.120"
actix-cors = "0.7.0"
zstd = "0.13.0"
snap = "1.1.0"
clap = { version = "4.5.26", features = ["unstable-doc"] }
lazy_static = "1.5.0"
tokio = "1.43.0"
