[package]
name = "rockshrew"
version = "8.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
hex = "0.4.3"
http = "1.1.0"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
rockshrew-runtime = { path = "../rockshrew-runtime" }
metashrew-runtime = { path = "../runtime" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.4.0"
clap_derive = "4.5.13"
env_logger = "0.11.5"
log = "0.4.22"
itertools = "0.13.0"
futures-util = "0.3.30"
retry = "2.0.0"
zstd = "0.13.0"
snap = "1.1.0"
