[package]
name = "metashrew-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.31.0", features = ["serde", "rand-std"] }
bitcoin_slices = { version = "0.7", features = ["bitcoin", "sha2"] }
bitcoincore-rpc = { version = "0.18" }
itertools = "0.12.0"
rlp = "0.5.2"
# rocksdb = "0.22.0"
wasmtime = "15.0.1"
log = "0.4"
crossbeam-channel = "0.5"
rayon = "1.8"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3.7"
