[package]
name = "metashrew-runtime"
version = "8.5.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.31.0", features = ["serde", "rand-std"] }
bitcoin_slices = { version = "0.7", features = ["bitcoin", "sha2"] }
bitcoincore-rpc = { version = "0.18" }
itertools = "0.12.0"
rlp = "0.5.2"
# rocksdb = "0.22.0"
wasmtime = "15.0.1"
log = "0.4"
crossbeam-channel = "0.5"
rayon = "1.8"
serde = "1.0"
serde_json = "1.0"
tempdir = "0.3.7"
wasmtime-environ = "20.0.2"
hex = "0.4.3"
protobuf = "3"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

