[package]
name = "metashrew"
version = "0.1.0"
edition = "2021"
description = "Bitcoin indexer framework with WebAssembly virtual machine"
license = "MIT"

[dependencies]
metashrew-smt-trait = { path = "../crates/metashrew-smt-trait" }
anyhow = "1.0"

[dev-dependencies]
memshrew-store = { path = "../memshrew-store" }
tokio = { version = "1.43", features = ["full", "test-util"] }