[package]
name = "metashrew-view"
version = "8.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
hex = "0.4.3"
itertools = "0.12.1"
rlp = "0.5.2"
serde = { version = "1.0.197", features = ["derive"] }
substring = "1.4.5"
tiny-keccak = {version = "2.0.2", features = ["sha3"]}
wasmtime = "18.0.3"
metashrew-runtime = { path = "../runtime" }
metashrew-indexer = { path = "../index" }
rocksdb = { version = "0.22.0", features = ["zstd", "snappy"] }
bitcoin = "0.32.1"
log = "0.4.22"
serde_json = "1.0.120"
anyhow = "1.0.86"
env_logger = "0.11.3"
