[package]
name = "debshrew-mono"
version.workspace = true
edition = "2021"
description = "CDC-enabled Bitcoin indexer with Kafka streaming"

[dependencies]
# Core dependencies from rockshrew-mono
rockshrew-mono = { path = "../rockshrew-mono" }
metashrew-runtime = { path = "../metashrew-runtime" }
rockshrew-runtime = { path = "../rockshrew-runtime" }
metashrew-sync = { path = "../metashrew-sync" }

# Async runtime
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Kafka integration
kafka = "0.10"
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Logging and error handling
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Schema registry (optional)
schema_registry_converter = { version = "3.0", optional = true }

[features]
default = []
schema-registry = ["schema_registry_converter"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[bin]]
name = "debshrew-mono"
path = "src/main.rs"