[package]
name = "metashrew-core"
version.workspace = true
description = "metashrew indexer bindings"
repository = "https://github.com/sandshrewmetaprotocols/metashrew"
license = "MIT"
edition = "2021"
resolver = "2"



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = "0.32.6"
bytes = "1.6.0"
cfg-if = "1.0.0"
wasm-bindgen = "0.2.100"
ordinals = "0.0.8"
protobuf = "3"
prost = "0.12.6"
anyhow = "1.0.89"
hex = "0.4.3"
getrandom = { workspace = true }
metashrew-macros = { path = "../metashrew-macros" }
metashrew-cache = { path = "../metashrew-cache", features = ["sync"] }

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

[features]
default = []
test-utils = []
panic-hook = []
allocator = []
