[package]
name = "metashrew-macros"
version.workspace = true
description = "Procedural macros for metashrew indexers"
repository = "https://github.com/sandshrewmetaprotocols/metashrew"
license = "MIT"
edition = "2021"
resolver = "2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }