[package]
name = "metashrew-runtime"
version = "9.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
metashrew-support = { path = "../metashrew-support" }
metashrew-core = { path = "../metashrew-core" }
# Removed rocksdb dependency - now generic over storage backends
zstd = "0.13.0"
snap = "1.1.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.12.1"
protobuf = "3"
wasmtime = "18.0.2"
tempfile = "3.8.1"
tokio = { version = "1.0", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
num_cpus = "1.16"

[dev-dependencies]
futures = "0.3"
wat = "1.235.0"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"

[features]
