[package]
name = "metashrew-runtime"
version = "9.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
# Removed rocksdb dependency - now generic over storage backends
zstd = "0.13.0"
snap = "1.1.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
hex = "0.4.3"
itertools = "0.12.1"
prost.workspace = true
wasmtime = "18.0.2"
tempfile = "3.8.1"

[build-dependencies]
prost-build.workspace = true

