[package]
name = "metashrew-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.136"
hex = "0.4.3"
sha2 = "0.10.9"
memshrew-store = { path = "../memshrew-store" }
metashrew-minimal = { path = "../metashrew-minimal" }
log = "0.4.25"
env_logger = "0.11.6"
rockshrew-runtime = { path = "../rockshrew-runtime" }
[[bin]]
name = "test-harness"
path = "src/main.rs"
